@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.42">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.43">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
     <import addon="script.module.inputstreamhelper" version="0.3.3" />
     <import addon="script.module.six" version="1.15.0"/>
     <import addon="script.module.kodi-six" version="0.1.3"/>
-    <import addon="context.otaku" version="0.0.8"/>
+    <import addon="context.otaku" version="0.0.9"/>
     <import addon="script.otaku.themepak" version="0.0.7"/>
   </requires>
   <extension library="default.py" point="xbmc.python.pluginsource">
@@ -24,8 +24,10 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.42 [20230305]:
-- re-added "Find Similar" to the context menu
+Changelog 0.3.43 [20230308]:
+- Added Context Menu "Find Recommendations"
+- Added Context Menu "Find Relations"
+- Renamed "Find Similar"
     </news>
   </extension>
 </addon>
