@@ -1,5 +1,6 @@
-9anime has been added!
-- Hey everyone, we have added the most complicated provider 9anime, Huge thanks to the Consumet Team for adding 9anime and we hope you all enjoy.
+Find Relations has been added!
+- Hey everyone, we have added "Find Relations" on the context menu so that way its easier to find all your seasons from one anime. 
+Big Thanks to @Gujal00 for helping me fix related anime.
 
-For All Users:
-- If you guys are not getting any streams, a label was changed so go to provider setting and make sure Nya or Nya Alt is enabled. 
+For Users using Find Recommendations:
+- We do have Recommendations working but Next Page will need to be worked on in the future.
