@@ -1,3 +1,8 @@
+Changelog 0.3.43 [20230308]:
+- Added Context Menu "Find Recommendations"
+- Added Context Menu "Find Relations"
+- Renamed "Find Similar"
+
 Changelog 0.3.42 [20230305]:
 - re-added "Find Similar" to the context menu
 
